@@ -123,19 +123,17 @@
                 <groupId>org.eclipse.jetty</groupId>
                 <artifactId>jetty-maven-plugin</artifactId>
                 <version>${jetty.version}</version>
-                <configuration>
-                    <jvmArgs>-Xmx784M -XX:MaxPermSize=256M -server -XX:+UseParallelGC -XX:+DisableExplicitGC</jvmArgs>
+                <configuration>                 
                     <war>${basedir}/target/dim-${project.version}</war>
                     <scanIntervalSeconds>1</scanIntervalSeconds>
-                    <stopKey>chuck</stopKey>
-                    <stopPort>9999</stopPort>
-                    <stopWait>7</stopWait>
                     <waitForChild>false</waitForChild>
                     <webApp>
-                        <contextPath>/</contextPath>
+                        <contextPath>${contextPath}</contextPath>
                     </webApp>
                 </configuration>
             </plugin>
         </plugins>
     </build>
+    
+
 </project>
